[gd_scene load_steps=7 format=3 uid="uid://2teh0mh4w68p"]

[ext_resource type="Script" path="res://Scripts/CheckPoint.gd" id="1_rdq3o"]
[ext_resource type="PackedScene" uid="uid://d2oxvv6aq1rre" path="res://Scenes/Lamp.tscn" id="2_uknho"]
[ext_resource type="Texture2D" uid="uid://0ujwof4tihug" path="res://Sprites/CheckPoint.png" id="3_aun8u"]
[ext_resource type="PackedScene" uid="uid://bd5uh5tqnl1wp" path="res://Scenes/Particles/flame_particles.tscn" id="4_mqvle"]
[ext_resource type="PackedScene" uid="uid://mm5d5iqq6u32" path="res://Scenes/Particles/smoke_particle.tscn" id="5_1k5h2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6jaj7"]
radius = 33.0606

[node name="CheckPoint" type="Area2D" groups=["CheckPoint"]]
script = ExtResource("1_rdq3o")

[node name="Lamp" parent="." instance=ExtResource("2_uknho")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6jaj7")

[node name="RespawnPoint" type="Node2D" parent="."]
position = Vector2(-1, -3)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_aun8u")

[node name="Particles" type="Node2D" parent="."]

[node name="FlameParticles" parent="Particles" instance=ExtResource("4_mqvle")]
position = Vector2(-20, -16)

[node name="FlameParticles2" parent="Particles" instance=ExtResource("4_mqvle")]
position = Vector2(-11, -15)

[node name="FlameParticles3" parent="Particles" instance=ExtResource("4_mqvle")]
position = Vector2(11, -15)

[node name="FlameParticles4" parent="Particles" instance=ExtResource("4_mqvle")]
position = Vector2(19, -16)

[node name="FlameParticles5" parent="Particles" instance=ExtResource("4_mqvle")]
position = Vector2(-1.19209e-07, -20)

[node name="SmokeParticle" parent="Particles" instance=ExtResource("5_1k5h2")]
position = Vector2(-20, -26)

[node name="SmokeParticle2" parent="Particles" instance=ExtResource("5_1k5h2")]
position = Vector2(-11, -25)

[node name="SmokeParticle3" parent="Particles" instance=ExtResource("5_1k5h2")]
position = Vector2(-1, -28)

[node name="SmokeParticle4" parent="Particles" instance=ExtResource("5_1k5h2")]
position = Vector2(11, -23)

[node name="SmokeParticle5" parent="Particles" instance=ExtResource("5_1k5h2")]
position = Vector2(19, -23)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
